ci: filter build and typedoc workflows by path

--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - src/**
+      - pnpm-lock.yaml
+      - package.json
   workflow_dispatch:
 
 concurrency:
