--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,17 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - src/**
+      - pnpm-lock.yaml
+      - package.json
   push:
     branches:
       - main
+    paths:
+      - src/**
+      - pnpm-lock.yaml
+      - package.json
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
