--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@commitlint/types": "19.5.0",
     "@eslint/js": "9.7.0",
     "@mxssfd/typedoc-theme": "1.1.7",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/git": "10.0.1",
     "@types/eslint__js": "8.42.3",
     "@types/node": "20.14.10",
     "@typescript-eslint/eslint-plugin": "8.6.0",
