--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lint-staged": "15.2.10",
     "prettier": "3.3.2",
     "rimraf": "6.0.1",
+    "semantic-release": "24.2.0",
     "tsup": "8.3.5",
     "typedoc": "0.26.11",
     "typedoc-plugin-extras": "3.1.0",
