--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "20.14.10",
     "@typescript-eslint/eslint-plugin": "8.6.0",
     "@typescript-eslint/parser": "8.6.0",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "domhandler": "5.0.3",
     "eslint": "9.7.0",
     "eslint-config-prettier": "9.1.0",
