--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A TypeScript library to scrape JavaDocs information.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": "github:Amgelo563/javadocs-scraper",
+  "bugs": "https://github.com/Amgelo563/javadocs-scraper/issues",
+  "homepage": "https://amgelo563.github.io/javadocs-scraper/",
   "scripts": {
     "clean": "rimraf ./dist",
     "build": "pnpm run clean && tsup ./src",
@@ -45,7 +48,7 @@
     "rimraf": "6.0.1",
     "semantic-release": "24.2.0",
     "tsup": "8.3.5",
-    "typedoc": "0.26.11",
+    "typedoc": "0.27",
     "typedoc-plugin-extras": "3.1.0",
     "typescript": "5.5.4",
     "typescript-eslint": "8.6.0"
