--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -1,13 +1,8 @@
 name: Deploy Typedoc
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - src/**
-      - pnpm-lock.yaml
-      - package.json
+  release:
+    types: [published]
   workflow_dispatch:
 
 concurrency:
